--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,15 +3,13 @@ services:
     image: mysql
     restart: always
     volumes:
-      - project-data:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - project-data:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: example
-      MYSQL_PASSWORD: example
-      MYSQL_USER: application
-      MYSQL_DB: application
+      MYSQL_DATABASE: application
     ports:
-      - 5432:5432
+      - 3306:3306
+
   app:
     build: .
     volumes:
