--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,6 +16,11 @@
         <server name="SYMFONY_PHPUNIT_REMOVE" value="" />
         <server name="SYMFONY_PHPUNIT_VERSION" value="9.5" />
     </php>
+    <groups>
+        <exclude>
+            <group>api</group>
+        </exclude>
+    </groups>
 
     <testsuites>
         <testsuite name="Project Test Suite">
